Fixed some things
Removed title, added “Hello”

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>AStudio</title>title>
+		<title>AStudio</title>
 	</head>
 	
 	<body>
-		<h1></h1>
+		<h1>Hello</h1>
 	</body>
 
 </html>
