--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html>
 	<head>
 		<title>AStudio</title>
+
+		<stlye>
+
+			body{
+			background-color: #000000;
+			}
+
+			h1{
+			color: #ff00ff;
+			}
+
+		</stlye>
+
 	</head>
 	
 	<body>
