--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>AStudio</title>
 
-		<stlye>
+		<style>
 
 			body{
 			background-color: #000000;
@@ -13,7 +13,7 @@
 			color: #ff00ff;
 			}
 
-		</stlye>
+		</style>
 
 	</head>
 	
