Added lots of stuff
lesson 1

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
 		<style>
 
 			body{
-			background-color: #000000;
+				background-color: #888888;
 			}
 
 			h1{
-			color: #ff00ff;
+				color: #ff00ff;
+			}
+
+			p{
+				color: #ffffff;
 			}
 
 		</style>
@@ -19,6 +23,11 @@
 	
 	<body>
 		<h1>Hello</h1>
+		<p>This is a sentence.</p>
+
+		<a href="lesson1.html">
+			<h5>Link to lesson 1</h5>
+		</a>
 	</body>
 
 </html>
